start of documentation fixes.

--- a/release/gff/gff_geez_mesob_halo/source/welcome.htm
+++ b/release/gff/gff_geez_mesob_halo/source/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">  
-  <title>The Geʾez Frontier Foundation Mesob Fidelat Keyboard</title>
+  <title>The Geʾez Frontier Foundation Harege Fidelat Keyboard</title>
 
 <style type="text/css" media="screen">
   img.indented { text-indent: 10%}
@@ -21,7 +21,7 @@ code {
 <body>
 
 
-<h1>The Geʾez Frontier Foundation Mesob Fidelat Keyboard</h1>
+<h1>The Geʾez Frontier Foundation Harege Fidelat Keyboard</h1>
 
 <h2><a id="abstract" name="abstract"></a>Introduction</h2>
 
@@ -37,14 +37,14 @@ The mobile keyboard uses the “Mesob” style layout of letters where letters a
 </p>
 
 <p style="text-align: justify;">
-The Mesob layout also has the goal of providing *all* letters actively used by the languages written with Geʾez script in a single keyboard “layer”. Given the high number of letters appearing on the keyboard, it is a better fit for tablet devices than for typical mobile phones. Consider using the more compact <a href="https://github.com/keymanapp/keyboards/tree/master/release/gff/gff_mesobe_fidelat">Mesobe Fidelat Keyboard</a> which is a similar design and fits more comfortably on the smaller mobile phone screens.
+The Mesob layout also has the goal of providing <em>all</em> letters actively used by the languages written with Geʾez script in a single keyboard “layer”. Given the high number of letters appearing on the keyboard, it is a better fit for tablet devices than for typical mobile phones. Consider using the more compact <a href="https://github.com/keymanapp/keyboards/tree/master/release/gff/gff_mesobe_fidelat">Mesobe Fidelat Keyboard</a> which is a similar design and fits more comfortably on the smaller mobile phone screens.
 </p>
 
 <div style="margin-left: 1em;">
 <h3>Letters</h3>
 
 <p style="text-align: justify;">
-The most frequently used letters generally appear in inner rings, and less used letter appear in the out rings. Letter appear in a semi-alphabetic arrangement in the clockwise dicrection, but not strictly so.  Some effort is made to group related letters together (related either by sound or shape).
+The most frequently used letters generally appear in inner rings, and less used letter appear in the out rings. Letter appear in a semi-alphabetic arrangement in the clockwise direction, but not strictly so.  Some effort is made to group related letters together (related either by sound or shape).
 </p>
 
 <img src="gff_mesob_halo-default-1.jpeg" style="border: 1px solid black;"/>
