--- a/release/gff/gff_geez_mesob_halo/source/welcome.htm
+++ b/release/gff/gff_geez_mesob_halo/source/welcome.htm
@@ -26,7 +26,7 @@ code {
 <h2><a id="abstract" name="abstract"></a>Introduction</h2>
 
 <p style="text-align: justify;">
-This is a language neutral touch (only) keyboard for mobile devices.  The keyboard provides all Ethiopic letters in active use on a single layer in circular, semi-clockwise orientation.  It is meant be intuitive for new typist, but supports faster typing for experienced typist compared to the similar <a href="https://github.com/keymanapp/keyboards/tree/master/release/gff/gff_mesobe_fidelat">Mesobe Fidelat Keyboard </a> keyboard.
+This is a language neutral touch (only) keyboard for mobile devices.  The keyboard provides all Ethiopic letters in active use on a single layer in circular, semi-clockwise orientation.  It is meant be intuitive for new typist, but supports faster typing for experienced typist compared to the similar <a href="https://keyman.com/keyboards/gff_mesobe_fidelat">Mesobe Fidelat Keyboard </a> keyboard.
 </p>
 
 <div>
@@ -37,7 +37,7 @@ The mobile keyboard uses the “Mesob” style layout of letters where letters a
 </p>
 
 <p style="text-align: justify;">
-The Mesob layout also has the goal of providing <em>all</em> letters actively used by the languages written with Geʾez script in a single keyboard “layer”. Given the high number of letters appearing on the keyboard, it is a better fit for tablet devices than for typical mobile phones. Consider using the more compact <a href="https://github.com/keymanapp/keyboards/tree/master/release/gff/gff_mesobe_fidelat">Mesobe Fidelat Keyboard</a> which is a similar design and fits more comfortably on the smaller mobile phone screens.
+The Mesob layout also has the goal of providing *all* letters actively used b the languages written with Geʾez script in a single keyboard “layer”. Given the high number of letters appearing on the keyboard, it is a better fit for larger size mobile phones.   Consider using the more compact <a href="https://keyman.com/keyboards/gff_amharic/">GFF Amharic Keyboard for regular sized mobile phones.
 </p>
 
 <div style="margin-left: 1em;">
@@ -66,7 +66,7 @@ Note the highlighted arrow button, <code>▶</code>, above the Enter key, it wil
 <h3>Punctuation</h3>
 
 <p style="text-align: justify;">
-On the letter keyboards, the `።` and `’` keys are the use popup menus to offer the most frequently used punctuation that did not fit easily on the keyboard.  Tap the `@` key to access all available Western punctuation as shown:
+On the letter keyboards, the <code>።</code> and <code>’</code> keys are the use popup menus to offer the most frequently used punctuation that did not fit easily on the keyboard.  Tap the <code>@</code> key to access all available Western punctuation as shown:
 </p>
 
 <img src="gff_mesob_halo-punctuation-1.jpeg" style="border: 1px solid black;"/>
@@ -76,7 +76,7 @@ On the letter keyboards, the `።` and `’` keys are the use popup menus to off
 <h3>Numerals</h3>
 
 <p style="text-align: justify;">
-Tap the `1/፩` key on the letter keyboards to shift to numerals. The numerals layer presents the Western numbers, Geʾez numbers, and all Geʾez punctuation.
+Tap the <code>1/፩</code> key on the letter keyboards to shift to numerals. The numerals layer presents the Western numbers, Geʾez numbers, and all Geʾez punctuation.
 </p>
 
 <img src="gff_mesob_halo-numerals-1.jpeg" style="border: 1px solid black;"/>
