--- a/release/gff/gff_geez_mesob/source/welcome.htm
+++ b/release/gff/gff_geez_mesob/source/welcome.htm
@@ -5,7 +5,7 @@
   <title>The Geʾez Frontier Foundation Harege Fidelat Keyboard</title>
 
 <style type="text/css" media="screen">
-  img.indented { text-indent: 10%}
+  img.indented { text-indent: 10% }
 
 
 code {
@@ -37,7 +37,7 @@ The mobile keyboard uses the “Mesob” style layout of letters where letters a
 </p>
 
 <p style="text-align: justify;">
-The Mesob layout also has the goal of providing <em>all</em> letters actively used by the languages written with Geʾez script in a single keyboard “layer”. Given the high number of letters appearing on the keyboard, it is a better fit for tablet devices than for typical mobile phones. Consider using the more compact <a href="https://github.com/keymanapp/keyboards/tree/master/release/gff/gff_harege_fidelat">Harege Fidelat Keyboard</a> which is a similar design and fits more comfortably on the smaller mobile phone screens.
+The Mesob layout also has the goal of providing <em>all</em> letters actively used by the languages written with Geʾez script in a single keyboard “layer”. Given the high number of letters appearing on the keyboard, it is a better fit for tablet devices than for typical mobile phones. Consider using the more compact <a href="https://keyman.com/keyboards/gff_harege_fidelat">Harege Fidelat Keyboard</a> which is a similar design and fits more comfortably on the smaller mobile phone screens.
 </p>
 
 <div style="margin-left: 1em;">
