--- a/release/gff/gff_geez_mesob_halo/source/welcome.htm
+++ b/release/gff/gff_geez_mesob_halo/source/welcome.htm
@@ -5,7 +5,7 @@
   <title>The Geʾez Frontier Foundation Harege Fidelat Keyboard</title>
 
 <style type="text/css" media="screen">
-  img.indented { text-indent: 10%}
+  img.indented { text-indent: 10% }
 
 
 code {
@@ -37,7 +37,7 @@ The mobile keyboard uses the “Mesob” style layout of letters where letters a
 </p>
 
 <p style="text-align: justify;">
-The Mesob layout also has the goal of providing *all* letters actively used b the languages written with Geʾez script in a single keyboard “layer”. Given the high number of letters appearing on the keyboard, it is a better fit for larger size mobile phones.   Consider using the more compact <a href="https://keyman.com/keyboards/gff_amharic/">GFF Amharic Keyboard for regular sized mobile phones.
+The Mesob layout also has the goal of providing *all* letters actively used b the languages written with Geʾez script in a single keyboard “layer”. Given the high number of letters appearing on the keyboard, it is a better fit for larger size mobile phones.   Consider using the more compact <a href="https://keyman.com/keyboards/gff_amharic/">GFF Amharic Keyboard</a> for regular sized mobile phones.
 </p>
 
 <div style="margin-left: 1em;">
@@ -47,19 +47,19 @@ The Mesob layout also has the goal of providing *all* letters actively used b th
 The most frequently used letters generally appear in inner rings, and less used letter appear in the out rings. Letter appear in a semi-alphabetic arrangement in the clockwise direction, but not strictly so.  Some effort is made to group related letters together (related either by sound or shape).
 </p>
 
-<img src="gff_mesob_halo-default-1.jpeg" style="border: 1px solid black;"/>
+<img src="gff_mesob_halo-default-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p style="text-align: justify;">
 Tapping a key once enters it on to the screen in the 6th (ሳድስ) form and a “halo” appears of the related letters. Tapping a related letter will update the first letter, or tap the 6th letter again to go back to the starting keyboard. 
 </p>
 
-<img src="gff_mesob_halo-default-2.jpeg" style="border: 1px solid black;"/>
+<img src="gff_mesob_halo-default-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p style="text-align: justify;">
 Note the highlighted arrow button, <code>▶</code>, above the Enter key, it will appear for large families of related letters.  When you need them, the <code>▶</code> button will bring up a 2nd halo of letters that are used less frequently. Note the reverse <code>◀</code> button which will go back to the first halo.
 </p>
 
-<img src="gff_mesob_halo-default-3.jpeg" style="border: 1px solid black;"/>
+<img src="gff_mesob_halo-default-3.jpeg" style="border: 1px solid black;" width="100%"/>
 </div>
 
 <div style="margin-left: 1em;">
@@ -69,7 +69,7 @@ Note the highlighted arrow button, <code>▶</code>, above the Enter key, it wil
 On the letter keyboards, the <code>።</code> and <code>’</code> keys are the use popup menus to offer the most frequently used punctuation that did not fit easily on the keyboard.  Tap the <code>@</code> key to access all available Western punctuation as shown:
 </p>
 
-<img src="gff_mesob_halo-punctuation-1.jpeg" style="border: 1px solid black;"/>
+<img src="gff_mesob_halo-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
 </div>
 
 <div style="margin-left: 1em;">
